--- a/libwdi/libwdi.rc
+++ b/libwdi/libwdi.rc
@@ -50,8 +50,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,4,1,781
- PRODUCTVERSION 1,4,1,781
+ FILEVERSION 1,5,0,782
+ PRODUCTVERSION 1,5,0,782
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -68,13 +68,13 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "akeo.ie"
             VALUE "FileDescription", "libwdi: Windows Driver Installer Library"
-            VALUE "FileVersion", "1.4.1.781"
+            VALUE "FileVersion", "1.5.0.782"
             VALUE "InternalName", "libwdi"
-            VALUE "LegalCopyright", "© 2010-2022 Pete Batard (LGPL v3)"
+            VALUE "LegalCopyright", "ï¿½ 2010-2023 Pete Batard (LGPL v3)"
             VALUE "LegalTrademarks", "https://www.gnu.org/copyleft/lesser.html"
             VALUE "OriginalFilename", "libwdi"
             VALUE "ProductName", "libwdi"
-            VALUE "ProductVersion", "1.4.1.781"
+            VALUE "ProductVersion", "1.5.0.782"
             VALUE "Comments", "http://libwdi.akeo.ie"
         END
     END
