[arm64] add support for libusb0 on arm64
* Closes #314.

--- a/libwdi/libusb0.inf.in
+++ b/libwdi/libusb0.inf.in
@@ -23,7 +23,7 @@ HKR,,,0,"libusb-win32 devices"
 HKR,,Icon,,-20
 
 [Manufacturer]
-%VendorName% = Devices, NT, NTAMD64
+%VendorName% = Devices, NT, NTAMD64, NTARM64
 
 ;--------------------------------------------------------------------------
 ; libusb-win32 files
@@ -42,7 +42,10 @@ libusb0.sys     = 1,amd64
 libusb0.dll     = 1,amd64
 #LK_DLL#     #LK_EQ_X64#
 libusb0_x86.dll = 1,x86
-#LK_X86_DLL# #LK_EQ_X86#
+
+[SourceDisksFiles.arm64]
+libusb0.sys     = 1,arm64
+libusb0.dll     = 1,arm64
 
 [DestinationDirs]
 libusb_files_sys       = 10,system32\drivers
@@ -73,6 +76,8 @@ CopyFiles = libusb_files_sys, libusb_files_dll_x86
 [LIBUSB_WIN32_DEV.NTAMD64]
 CopyFiles = libusb_files_sys, libusb_files_dll, libusb_files_dll_wow64
 
+[LIBUSB_WIN32_DEV.NTARM64]
+CopyFiles = libusb_files_sys, libusb_files_dll
 [LIBUSB_WIN32_DEV.NT.HW]
 DelReg = libusb_del_reg_hw
 AddReg = libusb_add_reg_hw
@@ -81,10 +86,17 @@ AddReg = libusb_add_reg_hw
 DelReg = libusb_del_reg_hw
 AddReg = libusb_add_reg_hw
 
+[LIBUSB_WIN32_DEV.NTARM64.HW]
+DelReg = libusb_del_reg_hw
+AddReg = libusb_add_reg_hw
+
 [LIBUSB_WIN32_DEV.NT.Services]
 AddService = libusb0, 0x00000002, libusb_add_service
 
 [LIBUSB_WIN32_DEV.NTAMD64.Services]
+AddService = libusb0, 0x00000002, libusb_add_service
+
+[LIBUSB_WIN32_DEV.NTARM64.Services]
 AddService = libusb0, 0x00000002, libusb_add_service
 
 ; Older versions of this .inf file installed filter drivers. They are not
@@ -129,3 +141,6 @@ ServiceBinary = %12%\libusb0.sys
 
 [Devices.NTAMD64]
 %DeviceName% = LIBUSB_WIN32_DEV.NTAMD64, USB\%DeviceID%
+
+[Devices.NTARM64]
+%DeviceName% = LIBUSB_WIN32_DEV.NTARM64, USB\%DeviceID%
