workflows: update to latest libusb-win32 to get ARM64 binaries

--- a/.github/workflows/vs2022.yml
+++ b/.github/workflows/vs2022.yml
@@ -22,7 +22,7 @@ on:
 
 env:
   WDK_URL: https://go.microsoft.com/fwlink/p/?LinkID=253170
-  LIBUSB0_URL: https://sourceforge.net/projects/libusb-win32/files/libusb-win32-releases/1.2.7.3/libusb-win32-bin-1.2.7.3.zip/download
+  LIBUSB0_URL: https://github.com/mcuee/libusb-win32/releases/download/snapshot_1.3.0.2/libusb-win32-bin-1.3.0.2.zip
   LIBUSBK_URL: https://github.com/mcuee/libusbk/releases/download/V3.1.0.0/libusbK-3.1.0.0-bin.7z
   SOLUTION_FILE_PATH: ./libwdi.sln
   BUILD_MACROS: '"WDK_DIR=\"../wdk/Windows Kits/8.0\";LIBUSB0_DIR=\"../libusb0\";LIBUSBK_DIR=\"../libusbk/bin\""'
