--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -53,7 +53,7 @@ jobs:
           autotools
           git
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
         submodules: recursive
@@ -82,8 +82,19 @@ jobs:
       if: ${{ github.event_name == 'push' }}
       run: sha256sum artifacts/${{ matrix.env }}/*.exe
     - name: Upload artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       if: ${{ github.event_name == 'push' }}
       with:
-        name: MinGW
+        name: ${{ matrix.sys }}
         path: ./artifacts/*/*.exe
+
+  Merge-Artifacts:
+    runs-on: windows-latest
+    needs: MinGW-Build
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        if: ${{ github.event_name == 'push' }}
+        with:
+          name: MinGW
+          delete-merged: true
