--- a/.github/workflows/vs2022.yml
+++ b/.github/workflows/vs2022.yml
@@ -33,7 +33,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
         submodules: recursive
@@ -53,7 +53,7 @@ jobs:
         move libusbK* libusbk
 
     - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1
+      uses: microsoft/setup-msbuild@v2
 
     - name: Build
       shell: cmd
@@ -65,7 +65,7 @@ jobs:
         )
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       if: ${{ github.event_name == 'push' }}
       with:
         name: VS2022
@@ -76,7 +76,7 @@ jobs:
       run: sha256sum ./*/*/examples/*.exe
 
     - name: Compress release-ready version of Zadig
-      uses: crazy-max/ghaction-upx@v2
+      uses: crazy-max/ghaction-upx@v3
       if: startsWith(github.ref, 'refs/tags/')
       with:
         version: latest
@@ -94,8 +94,19 @@ jobs:
         sha256sum zadig-*.exe
 
     - name: Upload release-ready version of Zadig
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       if: startsWith(github.ref, 'refs/tags/')
       with:
         name: Zadig
         path: ./zadig-*.exe
+
+  Merge-Artifacts:
+    runs-on: windows-latest
+    needs: VS2022-Build
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        if: ${{ github.event_name == 'push' }}
+        with:
+          name: Zadig
+          delete-merged: true
